re PR c++/11991 (ICE in cxx_incomplete_type_diagnostic, at cp/typeck2.c:282 when applying typeid operator to template template parameter)

PR c++/11991
	* typeck2.c (incomplete_type_diagnostic): Robustify.

	PR c++/11991
	* g++.dg/rtti/typeid3.C: New test.

From-SVN: r71488